@@ -83,6 +83,7 @@ Cacti CHANGELOG
 -issue#5184: Cacti permission checks generate SQL errors is the user has been deleted
 -issue#5185: Repair Database does not prune old Poller Item Records
 -issue#5187: Getting SQL errors in the Cacti due to plugin calling register function in wrong location
+-issue#5190: When using Gradient Support GPRINT Text Format is misaligned
 -issue#5232: On large systems statistics gathering at the beginning of a poller run lead to excessive polling times
 -issue#5236: Edit Graph Template link missing base_url
 -issue#5238: Searching for Poller Items Generates SQL Errors
